# global-density-approximation

./: README.md  pyproject.toml
gda/: features.py  gda.py  libxc.py  scf.py  utils.py
ggda/: __init__.py  decoder.py  embed.py  encoder.py  features.py  gda.py  layers.py  libxc.py  ofdft.py  pool.py  scf.py  symmetry.py  utils.py
